--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
 - helm init --client-only
 script:
 - make
-- pytest --black
+- pytest
 deploy:
 - provider: script
   skip_cleanup: true
