fix: add gitlab prefix

--- a/helm-chart/renku-gateway/templates/configmap.yaml
+++ b/helm-chart/renku-gateway/templates/configmap.yaml
@@ -152,6 +152,9 @@ data:
         [http.middlewares.development.headers]
           isDevelopment = true
 
+        [http.middlewares.direct.AddPrefix]
+          prefix = "{{ .Values.global.gitlab.urlPrefix }}"
+
         [http.middlewares.gitlab.AddPrefix]
           prefix = "{{ .Values.global.gitlab.urlPrefix }}/api/v4"
 
